Added basket functionality